<resources>

    <!-- 下拉刷新 -->
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_complete">更新完成</string>
    <string name="no_more_data">我是有底线的</string>
    <string name="loading">正在加载…</string>
    <string name="confirm">确定</string>
    <string name="notice">提示</string>
    <string name="cancel">取消</string>
    <string name="really_delete">确认删除吗</string>
    <string name="setting">设置</string>
    <string name="no_network">网络不给力，请检查网络连接后再试！</string>
    <string name="time_setting">时间设置</string>
    <string name="format_hour_min">%1$02d%2$s</string>
    <string name="format_time">%1$02d:%2$02d</string>


    <string name="home">主页</string>
    <string name="mine">我的</string>
    <string name="app_version">版本号</string>
    <string name="cache_clear">缓存清理</string>
    <string name="sure_logout">%1$s\n确定退出登录吗？</string>
    <string name="phone_num">手机号</string>
    <string name="passwd">密码</string>
    <string name="register_passwd">注册密码</string>
    <string name="confirm_passwd">确认密码</string>
    <string name="bind">绑定</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_device">设备号登录</string>
    <string name="login_by_wx">微信登录</string>
    <string name="user_login">账户登录</string>
    <string name="invitation_code">邀请码</string>
    <string name="app_not_install">应用未安装</string>
    <string name="user_out_relogin">用户信息失效 请重新登录</string>
    <string name="user_logouted">账户已登出</string>
    <string name="out_of_devices">您账号已在其他%1$d台设备上登录，请退出后重试</string>
    <string name="sure_exit">您确认退出吗？</string>
    <string name="percentage_sign">%</string>

</resources>
